--- a/PfDK.css
+++ b/PfDK.css
@@ -1,1 +1,1 @@
-@import "https://raw.githubusercontent.com/PfDK/PfDK.github.io/master/frontend/mmooc-min.css";
+@import "https://pfdk.github.io/frontend/mmooc-min.css";
