--- a/PfDK.css
+++ b/PfDK.css
@@ -1,2 +1,2 @@
-@import "https://pfdk.github.io/frontend/mmooc-min.css";
+@import "https://pfdk.github.io/frontend/pfdk-min.css";
 @import "https://pfdk.github.io/modules/modules.css";
